--- a/tests/reader/CMakeLists.txt
+++ b/tests/reader/CMakeLists.txt
@@ -6,4 +6,5 @@
 
 add_executable(determine-format determine-format.cpp)
 target_link_libraries(determine-format PRIVATE Catch2::Catch2WithMain)
-catch_discover_tests(determine-format)
+catch_discover_tests(determine-format
+  WORKING_DIRECTORY $(CMAKE_SOURCE_DIR)/tests/inputs)
