--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 
+## Toolchain settings
+set(CMAKE_CXX_FLAGS_DEBUG_INIT "-g -Og -Wall -Wpedantic -Werror")
+
 ## General configuration
 cmake_minimum_required(VERSION 3.5)
 
@@ -16,6 +19,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 include(GNUInstallDirs)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+## Source
+include_directories(include)
 
 ## Tests
 include(CTest)
