tests: Create a dependency between test inputs and their generating files

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,7 +4,10 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 
+set(CFG_TESTS_DIR ${CMAKE_SOURCE_DIR}/tests)
+
 enable_testing()
+add_subdirectory(inputs)
 
 find_package(Catch2 3 REQUIRED)
 
