--- a/tests/reader/CMakeLists.txt
+++ b/tests/reader/CMakeLists.txt
@@ -5,6 +5,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 add_executable(determine-format determine-format.cpp)
+target_link_libraries(determine-format PRIVATE cfgrid)
 add_dependencies(determine-format test_inputs)
 target_link_libraries(determine-format PRIVATE Catch2::Catch2WithMain)
 catch_discover_tests(determine-format
