chore: Create a main program

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,5 +4,8 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 
-add_library(cfgrid reader.cpp)
-target_include_directories(cfgrid PUBLIC ${CMAKE_SOURCE_DIR}/include)
+add_library(libcfg reader.cpp)
+target_include_directories(libcfg PUBLIC ${CMAKE_SOURCE_DIR}/include)
+
+add_executable(cfgrid main.cpp)
+target_link_libraries(cfgrid libcfg)
