feat: Implement parallel node reading functionality
Read nodes into a data structure

Each rank will read all nodes, but only keep the ones in its partition. The main program reads nodes
in parallel using MPI.

Adds the Partition and Parallel utility classes

Introduce the utils module.

Ensure code builds across clang++ and g++

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -65,3 +65,5 @@ function(define_test test_name test_file)
 endfunction()
 
 add_subdirectory(reader)
+add_subdirectory(utils)
+add_subdirectory(internals)
