feat(WIP): Add topology parsing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,14 +6,20 @@
 
 add_library(objparser OBJECT
   _node_parser.cpp node_parser.cpp
+  topo_parser.cpp
 )
 target_include_directories(objparser PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
-add_library(objmesh OBJECT gmsh.cpp)
+add_library(objmesh OBJECT
+  gmsh.cpp
+)
 target_include_directories(objmesh PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_link_libraries(objmesh objparser)
 
-add_library(libcfg $<TARGET_OBJECTS:objparser> $<TARGET_OBJECTS:objmesh>)
+add_library(libcfg
+  $<TARGET_OBJECTS:objparser>
+  $<TARGET_OBJECTS:objmesh>
+)
 target_include_directories(libcfg PUBLIC ${CMAKE_SOURCE_DIR}/include)
 set_target_properties(libcfg PROPERTIES OUTPUT_NAME "cfg") # Prevents building "liblibcfg.x"
 
