refactor: Move read_one into the reader module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,9 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 
-add_library(objparser OBJECT _node_parser.cpp node_parser.cpp)
+add_library(objparser OBJECT
+  _node_parser.cpp node_parser.cpp
+)
 target_include_directories(objparser PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
 add_library(objmesh OBJECT gmsh.cpp)
