--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,20 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 
+# Integration of KaHIP/parhip
+Include(FetchContent)
+
+FetchContent_Declare(
+  KaHIP
+  GIT_REPOSITORY https://github.com/KaHIP/KaHIP.git
+  GIT_TAG        v3.18
+)
+FetchContent_MakeAvailable(KaHIP)
+
+# remove the -Wpedantic flag as parhip doesn't handle it
+target_compile_options(parhip PRIVATE "-Wno-pedantic")
+
+
 add_library(objreader OBJECT reader.cpp)
 target_include_directories(objreader PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
